Update secondary entity detail pages to use link-tag component for external links

--- a/client/src/app/components/shared/link-tag/link-tag.component.html
+++ b/client/src/app/components/shared/link-tag/link-tag.component.html
@@ -1,4 +1,4 @@
-<a href="link.url" target="_blank">
+<a [href]="link.url" target="_blank">
   <nz-tag nzColor="default"
     nz-tooltip
     [nzTooltipTitle]="link.tooltip"
