--- a/client/src/app/components/shared/source-tag/source-tag.component.html
+++ b/client/src/app/components/shared/source-tag/source-tag.component.html
@@ -9,8 +9,8 @@
     <i nz-icon
       nzType="civic-source"
       nzTheme="twotone"
-      nzTwotoneColor="#07AFF0"></i>
-    {{ source.sourceType }}:&nbsp;{{ source.citation}}
+      nzTwotoneColor="#F9BA45"></i>
+    {{ source.displayType }}:&nbsp;{{ source.citation}}
   </nz-tag>
 </ng-template>
 
