--- a/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-detail.component.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-detail.component.html
@@ -5,17 +5,12 @@
         <nz-space-item>
           <i nz-icon nzType="audit"></i>
         </nz-space-item>
-        <span routerLink="/clinical-trials/{{t.id}}">
-          {{ t.name }}
-        </span>
+        {{ t.name }}
       </nz-space>
     </nz-page-header-title>
-    <nz-page-header-subtitle>
-      <a [href]="t.url" target="_blank">
-        {{ t.nctId }}
-        <i nz-icon nzType="link"></i>
-      </a>
-    </nz-page-header-subtitle>
+    <nz-page-header-extra>
+      <cvc-link-tag [link]="{url: t.url, label: t.nctId, tooltip: 'View on clinicaltrials.gov'}"></cvc-link-tag>
+    </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
         {{ t.description }}
