--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -5,17 +5,12 @@
         <nz-space-item>
           <i nz-icon nzType="civic:phenotype"></i>
         </nz-space-item>
-        <span routerLink="/phenotypes/{{phenotype.id}}">
-          {{ phenotype.name }}
-        </span>
+        {{ phenotype.name }}
       </nz-space>
     </nz-page-header-title>
-    <nz-page-header-subtitle>
-      <a href="https://hpo.jax.org/app/browse/term/{{phenotype.hpoId}}" target="_blank">
-        {{ phenotype.hpoId }}
-        <i nz-icon nzType="link"></i>
-      </a>
-    </nz-page-header-subtitle>
+    <nz-page-header-extra>
+      <cvc-link-tag [link]="{url: phenotype.url, label: phenotype.hpoId, tooltip: 'View in the HPO'}"></cvc-link-tag>
+    </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
         <router-outlet></router-outlet>
