--- a/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
+++ b/client/src/app/components/shared/phenotype-tag/phenotype-tag.component.html
@@ -5,12 +5,31 @@
 </ng-container>
 
 <ng-template #tag>
+  <nz-tag *ngIf="enablePopover; else noPopover" 
+  nz-popover
+  [nzPopoverMouseEnterDelay]="0.5"
+  [nzPopoverContent]="phenotypePopover"
+  nzPopoverPlacement="right"
+  nzPopoverTrigger="hover">
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
+  </nz-tag>
+
+  <ng-template #phenotypePopover>
+    <cvc-phenotype-popover [phenotypeId]="phenotype.id"></cvc-phenotype-popover>
+  </ng-template>
+</ng-template>
+
+<ng-template #noPopover>
   <nz-tag>
-    <i nz-icon nzType="civic-phenotype" nzTheme="twotone" nzTwotoneColor="#2A63B6"></i>
-    {{ phenotype.name }}
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 </ng-template>
 
 <ng-template #unlinked>
   <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
+
+<ng-template #tagContent>
+    <i nz-icon nzType="civic-phenotype" nzTheme="twotone" nzTwotoneColor="#2A63B6"></i>
+    {{ phenotype.name }}
 </ng-template>
