--- a/client/src/app/components/shared/source-tag/source-tag.component.html
+++ b/client/src/app/components/shared/source-tag/source-tag.component.html
@@ -5,15 +5,34 @@
 </ng-container>
 
 <ng-template #tag>
+  <nz-tag *ngIf="enablePopover; else noPopover" 
+  nz-popover
+  [nzPopoverMouseEnterDelay]="0.5"
+  [nzPopoverContent]="sourcePopover"
+  nzPopoverPlacement="right"
+  nzPopoverTrigger="hover">
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
+  </nz-tag>
+
+  <ng-template #sourcePopover>
+    <cvc-source-popover [sourceId]="source.id"></cvc-source-popover>
+  </ng-template>
+</ng-template>
+
+<ng-template #noPopover>
   <nz-tag>
-    <i nz-icon
-      nzType="civic-source"
-      nzTheme="twotone"
-      nzTwotoneColor="#F9BA45"></i>
-    {{ source.displayType }}:&nbsp;{{ source.citation}}
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 </ng-template>
 
 <ng-template #unlinked>
   <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
+
+<ng-template #tagContent>
+    <i nz-icon
+      nzType="civic-source"
+      nzTheme="twotone"
+      nzTwotoneColor="#F9BA45"></i>
+    {{ source.displayType }}:&nbsp;{{ source.citation}}
 </ng-template>
