--- a/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
+++ b/client/src/app/components/shared/variant-type-tag/variant-type-tag.component.html
@@ -5,12 +5,30 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag>
-    <i nz-icon nzType="apartment" class="variant-type-tag-icon"></i>
-    {{ variantType.name }}
+  <nz-tag *ngIf="enablePopover; else noPopover" 
+  nz-popover
+  [nzPopoverMouseEnterDelay]="0.5"
+  [nzPopoverContent]="variantTypePopover"
+  nzPopoverPlacement="right"
+  nzPopoverTrigger="hover">
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
+  <ng-template #variantTypePopover>
+    <cvc-variant-type-popover [variantTypeId]="variantType.id"></cvc-variant-type-popover>
+  </ng-template>
 </ng-template>
 
 <ng-template #unlinked>
   <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
+
+<ng-template #noPopover>
+  <nz-tag>
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
+  </nz-tag>
+</ng-template>
+
+<ng-template #tagContent>
+  <i nz-icon nzType="apartment" class="variant-type-tag-icon"></i>
+  {{ variantType.name }}
 </ng-template>
