--- a/client/src/app/components/shared/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.html
@@ -67,7 +67,7 @@
     </ng-template>
     <nz-row>
       <nz-col nzSpan="24">
-        <cvc-tag-list>
+        <cvc-tag-list size="sm">
           <ng-container
             *ngFor="let v of variants">
             <cvc-variant-tag [variant]="v"></cvc-variant-tag>
